# fastmcp-prod-medicalMCP

./: README.md  echo.py  main.py  pyproject.toml
docs/: Q&A.md  v1.md
token/: main.py
