[project]
name = "unified-mcp-server"
version = "0.2.0"
description = "Unified FastMCP Server with BigQuery and Google Calendar integration"
authors = [{name = "Matthieu Barraque", email = "matthieu.barraque@efrei.net"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core dependencies
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "attrs==25.3.0",
    "Authlib==1.6.3",
    "cachetools==5.5.2",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "cryptography==45.0.7",
    "cyclopts==3.24.0",
    
    # DNS and network
    "dnspython==2.8.0",
    "docstring_parser==0.17.0",
    "docutils==0.22",
    "email-validator==2.3.0",
    "exceptiongroup==1.3.0",
    
    # FastMCP framework
    "fastmcp==2.12.2",
    "mcp==1.13.1",
    
    # Google APIs - Core
    "google-api-core==2.25.1",
    "google-api-python-client==2.181.0",  # Required for Calendar API
    "google-auth==2.40.3",
    "google-auth-httplib2==0.2.0",         # Required for Calendar API
    "google-auth-oauthlib==1.2.2",         # Required for OAuth flow
    
    # Google Cloud - BigQuery
    "google-cloud-bigquery==3.37.0",
    "google-cloud-core==2.4.3",
    "google-crc32c==1.7.1",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.70.0",
    
    # gRPC
    "grpcio==1.74.0",
    "grpcio-status==1.74.0",
    
    # HTTP clients
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httplib2==0.30.2",                    # Required for Google API client
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    
    # Data validation and serialization
    "idna==3.10",
    "isodate==0.7.2",
    "jsonschema==4.25.1",
    "jsonschema-path==0.3.4",
    "jsonschema-specifications==2025.9.1",
    
    # Utilities
    "lazy-object-proxy==1.12.0",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "more-itertools==10.8.0",
    
    # OAuth
    "oauthlib==3.3.1",                     # Required for OAuth operations
    "requests-oauthlib==2.0.0",            # Required for OAuth with requests
    
    # OpenAPI
    "openapi-core==0.19.5",
    "openapi-pydantic==0.5.1",
    "openapi-schema-validator==0.6.3",
    "openapi-spec-validator==0.7.2",
    
    # Core utilities
    "packaging==25.0",
    "parse==1.20.2",
    "pathable==0.4.4",
    
    # Protocol Buffers
    "proto-plus==1.26.1",
    "protobuf==6.32.0",
    
    # ASN.1
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    
    # Parser
    "pycparser==2.23",
    "pyparsing==3.2.3",                    # Required for parsing operations
    
    # Pydantic
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "pydantic-core==2.33.2",
    
    # UI and formatting
    "Pygments==2.19.2",
    "pyperclip==1.9.0",
    
    # Date/Time handling
    "python-dateutil==2.9.0.post0",
    
    # Configuration
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    
    # Windows specific (conditional)
    "pywin32==311; sys_platform == 'win32'",
    
    # YAML
    "PyYAML==6.0.2",
    
    # References
    "referencing==0.36.2",
    
    # HTTP/Requests
    "requests==2.32.5",
    
    # Validation
    "rfc3339-validator==0.1.4",
    
    # Rich console output
    "rich==14.1.0",
    "rich-rst==1.3.1",
    
    # Data structures
    "rpds-py==0.27.1",
    
    # RSA
    "rsa==4.9.1",
    
    # Compatibility
    "six==1.17.0",
    
    # Async
    "sniffio==1.3.1",
    
    # SSE
    "sse-starlette==3.0.2",
    
    # Web framework
    "starlette==0.47.3",
    
    # Type inspection
    "typing-inspection==0.4.1",
    "typing-extensions==4.15.0",
    
    # URI handling
    "uritemplate==4.2.0",                  # Required for Google API client
    
    # URL handling
    "urllib3==2.5.0",
    
    # ASGI server
    "uvicorn==0.35.0",
    
    # WSGI
    "Werkzeug==3.1.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0"
]

[tool.uv.sources]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]  # Line too long - handled by black

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true